quick css fix
on smaller screens question page didn't had margin - was overlapped with navbar

--- a/Angular/src/app/questions/questions.component.scss
+++ b/Angular/src/app/questions/questions.component.scss
@@ -129,6 +129,7 @@ select:focus {
 @media only screen and (max-width: 1000px) {
   #main {
     width: 100%;
+    margin-top:41px;
   }
 }
 
